// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperRewards harvest succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 131396,
}
`;

exports[`KeeperRewards harvest succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 61126,
}
`;

exports[`KeeperRewards harvest succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 133567,
}
`;

exports[`KeeperRewards harvest succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 78280,
}
`;

exports[`KeeperRewards harvest succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 63297,
}
`;

exports[`KeeperRewards set rewards root succeeds 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 113482,
}
`;

exports[`KeeperRewards set rewards root succeeds 2`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 116270,
}
`;
